--- a/system/modules/admin/views/festivales/index.html
+++ b/system/modules/admin/views/festivales/index.html
@@ -1,4 +1,4 @@
 Lista de los festivales (<a href="/admin/festivales/agregar">Añadir Nuevo Festival</a>) | (<a href="/admin/festivales/lista_estilo">Listar Estilos</a>)<br/>
 <!-- BEGIN FESTIVALES_BLOCK -->
-{FESTIVAL_NOMBRE}  | (<a href="/admin/festivales/modificar/id/{FESTIVAL_ID}">Modificar</a>) | (<a href="/admin/festivales/borrar/id/{FESTIVAL_ID}">Borrar</a>)<br/>
+{FESTIVAL_NOMBRE}  | (<a href="/admin/festivales/modificar/id/{FESTIVAL_ID}">Modificar</a>) | (<a href="/admin/festivales/agregar_grupo/id/{FESTIVAL_ID}">Añadir Grupo</a>) | (<a href="/admin/festivales/borrar/id/{FESTIVAL_ID}">Borrar</a>)<br/>
 <!-- END FESTIVALES_BLOCK -->
