--- a/system/modules/admin/layouts/index.html
+++ b/system/modules/admin/layouts/index.html
@@ -9,7 +9,7 @@ and open the template in the editor.
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <a href="/admin">Home</a> | <a href="/admin/festivales">Festivales</a> | <a href="/admin/grupos">Grupos</a> | <a href="/admin/usuario">Usuarios</a> | Sair <br />
+        <a href="/admin">Home</a> | <a href="/admin/festivales">Festivales</a> | <a href="/admin/grupos">Grupos</a> | <a href="/admin/usuario">Usuarios</a> | Salir <br />
         <hr />
        {CONTENT}
        
