Sistema de formulário e alertas

--- a/system/modules/admin/views/grupos/modificarGrupo.html
+++ b/system/modules/admin/views/grupos/modificarGrupo.html
@@ -1,5 +1,5 @@
 Modificar Grupo (<a href="/admin/grupos">Volver</a>)<br /><br />
-<form method="POST" action="/admin/grupos/agregar_grupo">
+<form method="POST">
     nombre: <br/>
     <input name="nombre" type="text" value="{GRUPO_NOMBRE}"/>
 <br/>    
